fix(front-end): slider not working on mobile web

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -20,7 +20,6 @@ html {
   overflow: auto;
   height: 100%;
   min-height: 100vh !important;
-  touch-action: none;
 }
 
 body {
